[package]
name = "ring-pkae-example"
version = "0.1.0"
edition = "2021"
authors = [ "fboulnois <fboulnois@users.noreply.github.com>" ]
description = "An example of public key authenticated encryption in Rust"
keywords = [ "cryptography", "crypto", "public key authenticated encryption", "ecdh", "aead" ]
readme = "README.md"
repository = "https://github.com/fboulnois/ring-pkae-example"
license = "MPL-2.0"

[dependencies]
ring = "0.16.20"
